name: reflex-vty
version: 0.1.0.0
synopsis: Reflex FRP host and widgets for vty applications
description:
  Host and widget library for Reflex-based FRP applications
  .
  <<https://i.imgur.com/FULQNtu.gif>>
  .
license: BSD3
license-file: LICENSE
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
category: FRP
build-type: Simple
cabal-version: >=1.18
extra-source-files: README.md
                    ChangeLog.md
extra-doc-files: doc/welcome.gif
               , doc/tasks.png
tested-with: GHC ==8.6.5 || ==8.4.4 || ==8.2.2

library
  exposed-modules: Reflex.Vty
                 , Reflex.Vty.Host
                 , Reflex.Vty.Widget
                 , Reflex.Vty.Widget.Input
                 , Reflex.Vty.Widget.Input.Text
                 , Reflex.Vty.Widget.Layout
                 , Data.Text.Zipper
                 , Reflex.Class.Switchable
                 , Reflex.Spider.Orphans
                 , Control.Monad.NodeId
  build-depends:
    base <= 4.13,
    bimap,
    containers,
    data-default,
    dependent-map,
    dependent-sum,
    exception-transformers,
    mtl,
    primitive,
    ref-tf,
    reflex >= 0.6.1,
    stm,
    text,
    time,
    transformers,
    vty
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

executable example
  hs-source-dirs: src-bin
  main-is: example.hs
  ghc-options: -threaded
  build-depends:
    base,
    containers,
    reflex,
    reflex-vty,
    text,
    time,
    transformers,
    vty
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/reflex-frp/reflex-vty
