name: reflex-vty
version: 0.1.2.1
synopsis: Reflex FRP host and widgets for vty applications
description:
  Host and widget library for Reflex-based FRP applications
  .
  <<https://i.imgur.com/FULQNtu.gif>>
  .
license: BSD3
license-file: LICENSE
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
copyright: 2020 Obsidian Systems LLC
category: FRP
build-type: Simple
cabal-version: >=1.18
extra-source-files: README.md
                    ChangeLog.md
extra-doc-files: doc/welcome.gif
               , doc/tasks.png
tested-with: GHC ==8.6.5 || ==8.4.4

library
  exposed-modules: Reflex.Vty
                 , Reflex.Vty.Host
                 , Reflex.Vty.Widget
                 , Reflex.Vty.Widget.Input
                 , Reflex.Vty.Widget.Input.Text
                 , Reflex.Vty.Widget.Layout
                 , Data.Text.Zipper
                 , Reflex.Class.Switchable
                 , Reflex.Spider.Orphans
                 , Control.Monad.NodeId
  build-depends:
    base                              >= 4.10.0 && < 4.13,
    bimap                             >= 0.3.3 && < 0.4,
    containers                        >= 0.5.0 && < 0.7,
    mtl                               >= 2.2.2 && < 2.3,
    transformers                      >= 0.5.5 && < 0.6,
    stm                               >= 2.4 && < 2.6,
    data-default                      >= 0.7.1 && < 0.8,
    dependent-map                     >= 0.2.4 && < 0.4,
    text                              >= 1.2.3 && < 1.3,
    text-icu                          >= 0.7 && < 0.8,
    dependent-sum                     >= 0.3 && < 0.7,
    exception-transformers            >= 0.4.0 && < 0.5,
    primitive                         >= 0.6.3 && < 0.7,
    ref-tf                            >= 0.4.0 && < 0.5,
    reflex                            >= 0.6.2.4 && < 0.7,
    time                              >= 1.8.0 && < 1.9,
    vty                               >= 5.21 && < 5.26
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

executable example
  hs-source-dirs: src-bin
  main-is: example.hs
  ghc-options: -threaded
  build-depends:
    base,
    containers,
    reflex,
    reflex-vty,
    text,
    time,
    transformers,
    vty
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/reflex-frp/reflex-vty
