name: reflex-vty
version: 0.5.2.1
synopsis: Reflex FRP host and widgets for VTY applications
description:
  Build terminal applications using functional reactive programming (FRP) with Reflex FRP (<https://reflex-frp.org>).
  .
  <<https://i.imgur.com/FULQNtu.gif>>
license: BSD3
license-file: LICENSE
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
copyright: 2020 Obsidian Systems LLC
category: FRP
build-type: Simple
cabal-version: 1.18
extra-source-files:
  README.md
  ChangeLog.md
extra-doc-files: doc/tasks.png
tested-with:
  GHC ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.4.5 || ==9.6.1

source-repository head
  type: git
  location: https://github.com/reflex-frp/reflex-vty

library
  exposed-modules: Reflex.Vty
                 , Reflex.Vty.Host
                 , Reflex.Vty.Widget
                 , Reflex.Vty.Widget.Box
                 , Reflex.Vty.Widget.Input
                 , Reflex.Vty.Widget.Input.Mouse
                 , Reflex.Vty.Widget.Input.Text
                 , Reflex.Vty.Widget.Layout
                 , Reflex.Vty.Widget.Scroll
                 , Reflex.Vty.Widget.Split
                 , Reflex.Vty.Widget.Text
                 , Data.Text.Zipper
                 , Reflex.Spider.Orphans
                 , Control.Monad.NodeId
  build-depends:
    base >= 4.10.0 && < 4.20,
    bimap >= 0.3.3 && < 0.6,
    containers >= 0.5.0 && < 0.7,
    mtl >= 2.2.2 && < 2.4,
    transformers >= 0.5.5 && < 0.7,
    stm >= 2.4 && < 2.6,
    data-default >= 0.7.1 && < 0.8,
    dependent-map >= 0.4 && < 0.5,
    exceptions >= 0.10 && < 0.11,
    text >= 1.2.3 && < 2.1,
    dependent-sum >= 0.7 && < 0.8,
    exception-transformers >= 0.4.0 && < 0.5,
    mmorph >= 1.1 && < 1.3,
    ordered-containers >= 0.2.2 && < 0.3,
    primitive >= 0.6.3 && < 0.9,
    ref-tf >= 0.4.0 && < 0.6,
    reflex >= 0.9.2 && < 1,
    time >= 1.8.0 && < 1.13,
    vty >= 6.0 && < 6.3,
    vty-crossplatform >= 0.1 && < 0.5
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions:
    BangPatterns
    ConstraintKinds
    CPP
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    PatternGuards
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeOperators
    TypeFamilies

executable example
  hs-source-dirs: src-bin
  main-is: example.hs
  ghc-options: -threaded -Wall
  build-depends:
    base,
    containers,
    reflex,
    reflex-vty,
    text,
    time,
    transformers,
    vty
  default-language: Haskell2010
  other-modules: Example.CPU
  default-extensions:
    BangPatterns
    ConstraintKinds
    CPP
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    PatternGuards
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies


test-suite reflex-vty-test
  hs-source-dirs: test
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  other-modules:
    Data.Text.ZipperSpec
  build-depends:
    base,
    reflex,
    containers,
    reflex-vty,
    text,
    extra,
    hspec >= 2.7 && < 2.12
  default-language: Haskell2010
